--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
   </div>
   
   <div class="footer">
-    주소: 대전광역시 유성구 유성대로 1741 101동 1103호 Email: kiweice@gmail.com <br>
+    주소: 대전광역시 유성구 유성대로 1741, mail: kiweice@gmail.com <br>
     Copyright @ JuseongKim, All Rights Reserved.
   </div>
 </body>
