--- a/portfolio.html
+++ b/portfolio.html
@@ -6,53 +6,266 @@
   <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 <body>
-  <div class="header">
-    포트폴리오
-  </div>
+    <div class="header">
+      포트폴리오
+    </div>
 
-  <div class="boxes">
-    <a>
-      테이블요소
-    </a>
-    <a id="center">
-      폼 요소
-    </a>
-    <a>
-      리스트 요소
-    </a>
-  </div>
+    <div class="boxes">
+      <a>
+        테이블요소
+      </a>
+      <a id="center">
+        폼 요소
+      </a>
+      <a>
+        리스트 요소
+      </a>
+    </div>
 
-  <div class="menu__name">
-    구성요소
-  </div>
+    <div class="menu__name">
+      구성요소
+    </div>
 
-  <div class="menus">
-    <div class="t__menu">
-      테이블 요소
-    </div>
-    <div class="b__menu">
-      콘텐츠 영역
-    </div>
-  </div>
+    <div class="menus">
+      <div class="t__menu">
+        테이블 요소
+      </div>
+      <div class="b__menu">
+        <div>아동 사이즈</div>
+        <table>
+          <thead class="table1">
+            <th colspan="3" class="th">구분</th>
+            <th colspan="2" class="th">Small</th>
+            <th colspan="2" class="th">Medium</th>
+            <th colspan="2" class="th">Large</th>
+            <th colspan="2" class="th">X-Large</th>
+          </thead>
+          <tbody class="table1__body">
+            <tr>
+              <td colspan="2" rowspan="3" style="font-weight:bold;">미국 남아<br>[Boys 2-7]</td>
+              <td style="font-weight:bold;">사이즈</td>
+              <td>2T</td>
+              <td>3T</td>
+              <td>4T</td>
+              <td>4</td>
+              <td>5</td>
+              <td>6</td>
+              <td colspan="2">7</td>
+            </tr>
+            <tr>
+              <td style="font-weight:bold;">키</td>
+              <td>89-91</td>
+              <td>91-99</td>
+              <td>91-99</td>
+              <td>99-107</td>
+              <td>107-114</td>
+              <td>114-122</td>
+              <td colspan="2">122-130</td>
+            </tr>
+            <tr>
+              <td style="font-weight:bold;">몸무게</td>
+              <td>13-15</td>
+              <td>14-15</td>
+              <td>13-15</td>
+              <td>14-15</td>
+              <td>19-21</td>
+              <td>20-23</td>
+              <td colspan="2">23-25</td>
+            </tr>
 
-  <div class="menus">
-    <div class="t__menu">
-      폼 요소
-    </div>
-    <div class="b__menu">
-      콘텐츠 영역
-    </div>
-  </div>
+            <!-- 두번쨰 줄 -->
+            <tr>
+              <td colspan="2" rowspan="3" style="font-weight:bold;">미국 여아<br>[Girls 2-6X]</td>
+              <td style="font-weight:bold;">사이즈</td>
+              <td>2T</td>
+              <td>3T</td>
+              <td>4T</td>
+              <td>4</td>
+              <td>5</td>
+              <td>6</td>
+              <td colspan="2">6X</td>
+            </tr>
+            <tr>
+              <td style="font-weight:bold;">키</td>
+              <td>84-91</td>
+              <td>91-99</td>
+              <td>91-99</td>
+              <td>99-107</td>
+              <td>107-114</td>
+              <td>114-122</td>
+              <td colspan="2">122-130</td>
+            </tr>
+            <tr>
+              <td style="font-weight:bold;">몸무게</td>
+              <td>13-15</td>
+              <td>14-15</td>
+              <td>13-15</td>
+              <td>14-15</td>
+              <td>19-21</td>
+              <td>20-23</td>
+              <td colspan="2">23-25</td>
+            </tr>
+          </tbody>
+        </table>
+        <table>
+          <thead class="table2">
+            <tr>
+              <th class="th" style="width: 180px">구분</th>
+              <th class="th">환불가능액</th>
+              <th class="th">수수료</th>
+              <th class="th">총 환불금액</th>
+            </tr>
+          </thead>
+          <tbody class="table2__body">
+            <tr>
+              <td style="width: 180px; text-align: center;">게임 보상금액</td>
+              <td>100,000원</td>
+              <td>1,000원</td>
+              <td>99,000원</td>
+            </tr>
+            <tr>
+              <td style="width: 180px; text-align: center;">월정액 보상금액</td>
+              <td>10,000원</td>
+              <td>5,000원</td>
+              <td>5,000원</td>
+            </tr>
+            <tr>
+              <td style="width: 180px; text-align: center;">코인</td>
+              <td>9,000원</td>
+              <td>500원</td>
+              <td>8,500원</td>
+            </tr>
+            <tr>
+              <td class="a" style="width: 180px; text-align: center;">총합계</td>
+              <td class="a">119,000원</td>
+              <td class="a">6,500원</td>
+              <td class="a">112,500원</td>
+            </tr>
+          </tbody>
+        </table>
+        <tbody>
+          <tr>
 
-  <div class="menus">
-    <div class="t__menu">
-      리스트 요소
+          </tr>
+        </tbody>
+
+      </div>
     </div>
-    <div class="b__menu">
-      콘텐츠 영역
+
+    <div class="menus">
+      <div class="t__menu">
+        폼 요소
+      </div>
+      <div class="b__menu">
+        <div>회원 가입</div>
+        <form class="signup">
+          <div>아이디 </div>
+          <input type="text" name="ID" placeholder="ID"> <br>
+          <div>비밀번호 </div>
+          <input type="password" name="password" placeholder="password"> <br>
+          <div>생년월일</div>
+          <select class="year">
+            <option>년도</option>
+            <option>1980</option>
+            <option>1981</option>
+            <option>1982</option>
+            <option>1983</option>
+            <option>1984</option>
+            <option>1985</option>
+            <option>1986</option>
+            <option>1987</option>
+          </select>
+
+          <select class="month">
+            <option>월</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+            <option>6</option>
+            <option>7</option>
+            <option>8</option>
+            <option>9</option>
+            <option>10</option>
+            <option>11</option>
+            <option>12</option>
+          </select>
+
+          <select class="week">
+            <option>주</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+          <div>
+            성별
+          </div>
+          <div class="radio1">
+            <input type="radio" name="성별" value="남성">남성
+            <input type="radio" name="성별" value="여성">여성
+          </div>
+          <div>이메일 </div>
+          <input type="text" name="password" placeholder="@가 들어간 이메일을 입력하세요"> <br>
+          <div>휴대전화 </div>
+          <div class="phone__num">
+            <input type="text" name="phoneNumber" placeholder="휴대전화번호">
+            <button type="button" name="button">인증번호 받기</button> <br>
+          </div>
+          <input type="text" name="certification" placeholder="인증번호" class="certi">
+
+          <div>취미</div>
+          <div class="hobby">
+            <input type="checkbox" name="운동"> <label>운동</label>
+            <input type="checkbox" name="요리"><label>요리</label>
+            <input type="checkbox" name="여행"><label>여행</label>
+            <input type="checkbox" name="게임"><label>게임</label>
+            <input type="checkbox" name="음악"><label>음악</label>
+            <input type="checkbox" name="독서"><label>독서</label>
+            <input type="checkbox" name="독서"><label>영화</label>
+          </div>
+
+          <div>가입인사</div>
+          <textarea name="name" rows="5" style="width: 100%; padding: 5px 20px; margin-right: 14px; box-sizing: border-box;"></textarea>
+          <input type="submit" class="submit__button">
+        </form>
+      </div>
     </div>
-  </div>
-  
+
+    <div class="menus">
+      <div class="t__menu">
+        리스트 요소
+      </div>
+      <div class="b__menu">
+        <div>'프로젝트' 사전 검색 결과</div>
+        <div class="contents__box">
+          <p class="subject">프로젝트</p>
+          <p class="cont__subject">프로젝트</p>
+          <p class="cont__contents">어떤 신제품을 개발한다던가 새로운 시스템을 만드는 행동 등,
+            특정한 목표을 달성하기 위해서 조직적으로 움직이는 작업 과정을 프로젝트라고 합니다.
+            프로젝트에는 목적을 달성하기 위해 업무를 계획하고 필요한 업무를 나누고 그 계획에 맞게 일을 해서 기한
+            내에 그 일을 해내는 것 등을 모두 포함하고 있습니다.</p>
+
+          <p class="cont__subject">프로젝트</p>
+          <p class="cont__contents">특정 목적 달성을 위한 시스템 개발, 프로그램 설계 등</p>
+        </div>
+
+        <div>실시간 검색어</div>
+        <div class="search__result">
+          <div class="search__row">
+              <span>1</span> <a href="https://search.naver.com/search.naver?sm=tab_sug.top&where=nexearch&query=%ED%9E%88%EC%96%B4%EB%A1%9C%EC%A6%88+%EC%98%A4%EB%B8%8C+%EB%8D%94+%EC%8A%A4%ED%86%B0&oquery=%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8&tqi=UIX5EwprvhGssF%2FwRCdssssssKR-503557&acq=%ED%9E%88%EC%96%B4%EB%A1%9C%EC%A6%88+%EC%98%A4%EB%B8%8C&acr=1&qdt=0">히어로즈 오브 더 스톰</a>
+          </div>
+          <div class="search__row">
+              <span>2</span> <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%A1%A4%ED%86%A0%EC%B2%B4%EC%8A%A4&oquery=%ED%9E%88%EC%96%B4%EB%A1%9C%EC%A6%88+%EC%98%A4%EB%B8%8C+%EB%8D%94+%EC%8A%A4%ED%86%B0&tqi=UIXL3wp0J14ssT7oqtKssssssWw-411334">롤토체스</a>
+          </div>
+          <div class="search__row">
+              <span>3</span> <a href="https://search.naver.com/search.naver?sm=tab_hty.top&where=nexearch&query=%EB%A1%A4%ED%86%A0%EC%B2%B4%EC%8A%A4&oquery=%ED%9E%88%EC%96%B4%EB%A1%9C%EC%A6%88+%EC%98%A4%EB%B8%8C+%EB%8D%94+%EC%8A%A4%ED%86%B0&tqi=UIXL3wp0J14ssT7oqtKssssssWw-411334">용과같이</a>
+          </div>
+        </div>
+      </div>
+    </div>
   <div class="footer">
     주소: 대전광역시 유성구 유성대로 1741, mail: kiweice@gmail.com <br>
     Copyright @ JuseongKim, All Rights Reserved.
